--- a/file.resx
+++ b/file.resx
@@ -42,3 +42,4 @@
     <data name="CARO_CAROPTI_100" xml:space="preserve"><value>Car Option</value></data>
     <data name="COMM_THISSHO_1" xml:space="preserve"><value>this should be detected</value></data>
   </root>
+</xml>
